--- a/css/form.css
+++ b/css/form.css
@@ -30,6 +30,7 @@ body {
     top: 0;
     z-index: 1000;
     transition: all 0.3s ease;
+    
 }
 
 .nav-container {
@@ -39,6 +40,7 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: #f39c12;
+  
 }
 
 .logo-img {
@@ -66,11 +68,14 @@ body {
 .nav-menu ul {
     display: flex;
     list-style: none;
+    
 }
 
 .nav-menu ul li {
     margin-left: 30px;
+    
 }
+
 
 .nav-menu a {
     color: #333;
@@ -79,6 +84,9 @@ body {
     padding: 8px 12px;
     transition: all 0.3s ease;
     position: relative;
+    text-decoration: none;
+   
+    
 }
 
 .nav-menu a::after {
@@ -112,6 +120,7 @@ body {
     color: #003d82;
     z-index: 1001;
 }
+
 
 /* --------------------------------------------------- Team Section ------------------------------------------------------ */
 #our-team {
